# labo-project

./: CHANGELOG.md  LICENSE  README.md  labo-project.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/61c73b34/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/8a36e99ee97912694ea1930b01d49c3f43715da50f063b7c6b281161ea29118d/9.8.4/lib/x86_64-linux-ghc-9.8.4/labo-project-0.1.0.0-Jy24IcIlhrm9V4ffaXA0JM/: Analyzer.dyn_hi  Analyzer.hi  Parser.dyn_hi  Parser.hi
.stack-work/install/x86_64-linux-tinfo6/8a36e99ee97912694ea1930b01d49c3f43715da50f063b7c6b281161ea29118d/9.8.4/pkgdb/: labo-project-0.1.0.0-58yfmzrlyFTIN76GJU0iD0.conf  labo-project-0.1.0.0-Gj9f7gbYe1HIGjfHFjIG9q.conf  package.cache
app/: AST.txt  Main.hs  parse.txt  preprocessed_output.i  test.c
src/: Analyzer.hs  Parser.hs
test/: Spec.hs
