cabal-version:       2.2

name:                labo-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/labo-project#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Le Marrec Elouan
maintainer:          artifowl@gmail.com
copyright:           2025 Le Marrec Elouan
category:            Application
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable labo-project
  hs-source-dirs:      src app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       language-c
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
  other-modules:      Parser
