cabal-version:       2.2

name:                labo-project
version:             0.1.0.0
homepage:            https://github.com/githubuser/labo-project#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Le Marrec Elouan
maintainer:          artifowl@gmail.com
copyright:           2025 Le Marrec Elouan
category:            Application
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  exposed-modules:     Analyzer, Parser
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5,
                       fgl >=5.8.3.0,
                       language-c >= 0.10 && < 0.11,
                       bytestring,
                       containers,
                       text >= 1.2
  default-language:    Haskell2010

executable labo-project
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       labo-project,
                       tasty,
                       tasty-hunit,
                       scotty,
                       wai-extra,
                       temporary,
                       text,
                       bytestring
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

test-suite labo-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       tasty,
                       tasty-hunit,
                       language-c,
                       text,
                       containers,
                       bytestring,
                       labo-project
  default-language:    Haskell2010
